# sdk_deploy

./: Contributors.md  README.md  map.pgm  map.yaml  nav2_lite3_params.yaml  pcd_to_grid.py
docker/: Dockerfile  docker-compose.yml
documentation/: README.md
isaacsim/: demonstration.usd
isaacsim/Lite3/Lite3_urdf/urdf/Lite3/configuration/: Lite3_physics.usd
isaacsim/environment/: demo.usd  demo2.usd  demo3.usd
isaacsim/environment/configuration/: demo_physics.usd
src/FAST_LIO_ROS2/: CMakeLists.txt  README.md
src/FAST_LIO_ROS2/config/: xt32.yaml
src/FAST_LIO_ROS2/rviz/: fastlio.rviz
src/FAST_LIO_ROS2/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/Lite3_sdk_deploy/: CMakeLists.txt  main.cpp  package.xml
src/Lite3_sdk_deploy/include/types/: custom_types.h
src/Lite3_sdk_deploy/interface/user_command/: keyboard_interface.hpp  keyboard_interface_sim.hpp  ros2_command_interface.hpp
src/Lite3_sdk_deploy/policy/: policy.onnx
src/Lite3_sdk_deploy/run_policy/: lite3_policy_runner.hpp
src/Lite3_sdk_deploy/state_machine/parameters/: lite3_control_parameters.cpp
src/Lite3_sdk_deploy/state_machine/quadruped/: q_state_machine.hpp
src/isaac_bridge/: CMakeLists.txt  README.md  package.xml
src/isaac_bridge/config/: bridge_params.yaml
src/isaac_bridge/documentation/: README.md
src/isaac_bridge/isaacsim/: demo3_training_stairs_ref.usda
src/isaac_bridge/launch/: bridge.launch.py
src/isaac_bridge/src/: cmd_bridge_node.cpp  state_bridge_node.cpp
src/stair-step-detector/ros/stair_step_detector_pkg/stair_step_detector_pkg/: stair_step_detector.py
